--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: PR liniting
 
 on:
   pull_request:
-    types: [opened, labeled, unlabeled, synchronize]
+    types: [opened, labeled, unlabeled, synchronize, edited, reopened]
 
 jobs:
   verify-pr-labels:
@@ -13,4 +13,14 @@ jobs:
       with:
         github-token: '${{ secrets.GITHUB_TOKEN }}'
         valid-labels: 'ready-for-merge'
-      if: github.event_name == 'pull_request' && contains([opened, labeled, unlabeled, synchronize], github.event.action)
+      if: github.event_name == 'pull_request' && contains(['opened', 'labeled', 'unlabeled', 'synchronize'], github.event.action)
+  pr-lint:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Verify Pull Request Labels
+      uses: morrisoncole/pr-lint-action@v1.1.0
+      with:
+        title-regex: "#VC-[0-9]+"
+        on-failed-regex-comment: "This is just an example. Failed regex: `%regex%`!"
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+      if: github.event_name == 'pull_request' && contains(['opened', 'edited', 'reopened'], github.event.action)
